# beRi

./: .travis.yml  README.md  README.rst  pyproject.toml
beri/: beRi.py  utils.py
beri/commands/: configr.py
beri/cookies/: beRi_config.toml
tests/: test_beri.py
