[tool.poetry]
name = "beri"
version = "0.1.0"
description = "beRi is a package manager for R."
authors = ["Robert Gilmore <rgilmore@umc.edu>", "Shaurita Hutchins <sdhutchins@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/datasnakes/beRi"

[tool.poetry.dependencies]
python = "*"
click = "^6.7"
rpy2 = "^2.9"
cookiecutter = "^1.6"
pipenv = "^11.10"
pipwin = "^0.4.3"
toml = "^0.9.4"

[tool.poetry.dev-dependencies]
pytest = "^3.5"

[package]
include = ["tests/*", "beRi/config/*"]
exclude = []

[tool.poetry.scripts]
beRi = "beRi:beri"
