[tool.poetry]
name = "beri"
version = "0.1.0"
description = "beRi 'beri environments for R installations' is an R environment, R installation, and R package management system for R."
authors = ["Robert Gilmore <rgilmore@umc.edu>",
          "Shaurita Hutchins <sdhutchins@outlook.com>",
          "Bruno Grande <bgrande@sfu.ca>",
          "Santina Lin <hello@santina.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/datasnakes/beRi"

[tool.poetry.dependencies]
python = "*"
click = "^6.7"

[tool.poetry.dev-dependencies]
pytest = "^3.5"

[package]
include = ["tests/*", "beRi/config/*"]
exclude = []

[tool.poetry.scripts]
beRi = "beRi:beri"
